--- a/Nez/Nez-PCL/Nez.csproj
+++ b/Nez/Nez-PCL/Nez.csproj
@@ -1,4 +1,4 @@
-<?xml version="1.0" encoding="utf-8"?>
+﻿<?xml version="1.0" encoding="utf-8"?>
 <Project DefaultTargets="Build" ToolsVersion="4.0" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
@@ -30,66 +30,8 @@
     <ConsolePause>false</ConsolePause>
   </PropertyGroup>
   <Import Project="$(MSBuildExtensionsPath32)\Microsoft\Portable\$(TargetFrameworkVersion)\Microsoft.Portable.CSharp.targets" />
+  <ItemGroup />
   <ItemGroup>
-    <Folder Include="Debug\" />
-    <Folder Include="ECS\" />
-    <Folder Include="Graphics\" />
-    <Folder Include="Input\" />
-    <Folder Include="Math\" />
-    <Folder Include="Physics\" />
-    <Folder Include="Stuff\" />
-    <Folder Include="Utils\" />
-    <Folder Include="PipelineRuntime\" />
-    <Folder Include="Utils\DebugConsole\" />
-    <Folder Include="Utils\Tweens\" />
-    <Folder Include="Utils\Tweens\Easing\" />
-    <Folder Include="Utils\Tweens\Interfaces\" />
-    <Folder Include="Utils\Timers\" />
-    <Folder Include="Utils\Coroutines\" />
-    <Folder Include="ECS\Components\Renderables\Sprites\" />
-    <Folder Include="Graphics\Textures\" />
-    <Folder Include="PipelineRuntime\TextureAtlas\" />
-    <Folder Include="Physics\QuadTree\" />
-    <Folder Include="ECS\Components\Renderables\Particles\" />
-    <Folder Include="PipelineRuntime\ParticleDesigner\" />
-    <Folder Include="Utils\Analysis\" />
-    <Folder Include="ECS\Systems\" />
-    <Folder Include="Physics\Shapes\" />
-    <Folder Include="Graphics\PostProcessing\PostProcessors\" />
-    <Folder Include="Graphics\Effects\" />
-    <Folder Include="Graphics\Transitions\" />
-    <Folder Include="PipelineRuntime\UISkin\" />
-    <Folder Include="Input\Virtual\" />
-    <Folder Include="Graphics\Batcher\" />
-    <Folder Include="Graphics\DeferredLighting\" />
-    <Folder Include="AI\" />
-    <Folder Include="AI\FSM\" />
-    <Folder Include="AI\BehaviorTree\" />
-    <Folder Include="AI\BehaviorTree\Actions\" />
-    <Folder Include="AI\BehaviorTree\Composites\" />
-    <Folder Include="AI\BehaviorTree\Conditionals\" />
-    <Folder Include="AI\BehaviorTree\Decorators\" />
-    <Folder Include="AI\UtilityAI\" />
-    <Folder Include="AI\UtilityAI\Actions\" />
-    <Folder Include="AI\UtilityAI\Reasoners\" />
-    <Folder Include="AI\UtilityAI\Considerations\" />
-    <Folder Include="AI\UtilityAI\Considerations\Appraisals\" />
-    <Folder Include="AI\GOAP\" />
-    <Folder Include="Graphics\Renderers\Reflections\" />
-    <Folder Include="Utils\Fonts\" />
-    <Folder Include="Utils\Collections\" />
-    <Folder Include="AI\Pathfinding\" />
-    <Folder Include="AI\Pathfinding\BreadthFirst\" />
-    <Folder Include="AI\Pathfinding\AStar\" />
-    <Folder Include="Utils\Extensions\" />
-    <Folder Include="Debug\Inspector\" />
-    <Folder Include="Debug\Inspector\Attributes\" />
-    <Folder Include="Debug\Inspector\Inspectors\" />
-    <Folder Include="UI\Utils\" />
-    <Folder Include="Content\" />
-  </ItemGroup>
-  <ItemGroup>
-    <Compile Include="Debug\Debug.cs" />
     <Compile Include="ECS\Camera.cs" />
     <Compile Include="ECS\Component.cs" />
     <Compile Include="ECS\Entity.cs" />
@@ -115,6 +57,27 @@
     <Compile Include="Input\GamePadData.cs" />
     <Compile Include="Input\Input.cs" />
     <Compile Include="Math\Mathf.cs" />
+    <Compile Include="NezDebug\Assert.cs" />
+    <Compile Include="NezDebug\Debug.cs" />
+    <Compile Include="NezDebug\DebugDrawItem.cs" />
+    <Compile Include="NezDebug\Inspector\Attributes\CustomInspectorAttribute.cs" />
+    <Compile Include="NezDebug\Inspector\Attributes\InspectableAttribute.cs" />
+    <Compile Include="NezDebug\Inspector\Attributes\InspectorCallableAttribute.cs" />
+    <Compile Include="NezDebug\Inspector\Attributes\RangeAttribute.cs" />
+    <Compile Include="NezDebug\Inspector\Attributes\TooltipAttribute.cs" />
+    <Compile Include="NezDebug\Inspector\InspectorList.cs" />
+    <Compile Include="NezDebug\Inspector\Inspectors\BoolInspector.cs" />
+    <Compile Include="NezDebug\Inspector\Inspectors\ColorInspector.cs" />
+    <Compile Include="NezDebug\Inspector\Inspectors\EffectInspector.cs" />
+    <Compile Include="NezDebug\Inspector\Inspectors\EnumInspector.cs" />
+    <Compile Include="NezDebug\Inspector\Inspectors\FloatInspector.cs" />
+    <Compile Include="NezDebug\Inspector\Inspectors\Inspector.cs" />
+    <Compile Include="NezDebug\Inspector\Inspectors\IntInspector.cs" />
+    <Compile Include="NezDebug\Inspector\Inspectors\MethodInspector.cs" />
+    <Compile Include="NezDebug\Inspector\Inspectors\StringInspector.cs" />
+    <Compile Include="NezDebug\Inspector\Inspectors\StructInspector.cs" />
+    <Compile Include="NezDebug\Inspector\Inspectors\Vector2Inspector.cs" />
+    <Compile Include="NezDebug\Inspector\RuntimeInspector.cs" />
     <Compile Include="Physics\Collisions.cs" />
     <Compile Include="Physics\Physics.cs" />
     <Compile Include="Physics\Ray2D.cs" />
@@ -163,7 +126,6 @@
     <Compile Include="ECS\Components\Renderables\Sprites\SpriteAnimation.cs" />
     <Compile Include="Physics\RaycastHit.cs" />
     <Compile Include="Math\Flags.cs" />
-    <Compile Include="Debug\DebugDrawItem.cs" />
     <Compile Include="Math\Random.cs" />
     <Compile Include="ECS\Components\FollowCamera.cs" />
     <Compile Include="Graphics\Textures\Subtexture.cs" />
@@ -209,7 +171,6 @@
     <Compile Include="Physics\Shapes\ShapeCollisions.cs" />
     <Compile Include="Physics\Shapes\Circle.cs" />
     <Compile Include="Physics\Shapes\Box.cs" />
-    <Compile Include="Debug\Assert.cs" />
     <Compile Include="Physics\Shapes\RealtimeCollisions.cs" />
     <Compile Include="Utils\Triangulator.cs" />
     <Compile Include="ECS\Systems\PassiveSystem.cs" />
@@ -448,20 +409,6 @@
     <Compile Include="Utils\Extensions\SpriteBatchExt.cs" />
     <Compile Include="Utils\Extensions\KeysExt.cs" />
     <Compile Include="Utils\Extensions\FloatExt.cs" />
-    <Compile Include="Debug\Inspector\RuntimeInspector.cs" />
-    <Compile Include="Debug\Inspector\Attributes\InspectableAttribute.cs" />
-    <Compile Include="Debug\Inspector\Attributes\RangeAttribute.cs" />
-    <Compile Include="Debug\Inspector\Inspectors\BoolInspector.cs" />
-    <Compile Include="Debug\Inspector\Inspectors\FloatInspector.cs" />
-    <Compile Include="Debug\Inspector\Inspectors\Inspector.cs" />
-    <Compile Include="Debug\Inspector\Inspectors\IntInspector.cs" />
-    <Compile Include="Debug\Inspector\Inspectors\StringInspector.cs" />
-    <Compile Include="Debug\Inspector\Inspectors\Vector2Inspector.cs" />
-    <Compile Include="Debug\Inspector\Attributes\CustomInspectorAttribute.cs" />
-    <Compile Include="Debug\Inspector\Attributes\InspectorCallableAttribute.cs" />
-    <Compile Include="Debug\Inspector\Inspectors\MethodInspector.cs" />
-    <Compile Include="Debug\Inspector\Inspectors\ColorInspector.cs" />
-    <Compile Include="Debug\Inspector\Inspectors\EffectInspector.cs" />
     <Compile Include="UI\Containers\ScrollPane.cs" />
     <Compile Include="Graphics\ScissorStack.cs" />
     <Compile Include="UI\Widgets\ListBox.cs" />
@@ -472,11 +419,7 @@
     <Compile Include="UI\Widgets\Tooltip.cs" />
     <Compile Include="UI\Utils\TooltipManager.cs" />
     <Compile Include="UI\Widgets\TextTooltip.cs" />
-    <Compile Include="Debug\Inspector\Attributes\TooltipAttribute.cs" />
-    <Compile Include="Debug\Inspector\Inspectors\EnumInspector.cs" />
-    <Compile Include="Debug\Inspector\Inspectors\StructInspector.cs" />
     <Compile Include="Utils\Extensions\ComponentExt.cs" />
-    <Compile Include="Debug\Inspector\InspectorList.cs" />
     <Compile Include="Input\TouchInput.cs" />
     <Compile Include="Utils\AbstractGlobalManager.cs" />
     <Compile Include="Utils\Collections\FastList.cs" />
