--- a/Arakara/Arakara.csproj
+++ b/Arakara/Arakara.csproj
@@ -38,6 +38,18 @@
     <ApplicationIcon>Icon.ico</ApplicationIcon>
   </PropertyGroup>
   <ItemGroup>
+    <Compile Include="Battle\BattleState.cs" />
+    <Compile Include="Battle\Card.cs" />
+    <Compile Include="Battle\Effect.cs" />
+    <Compile Include="Battle\Faction.cs" />
+    <Compile Include="Battle\Grade.cs" />
+    <Compile Include="Battle\Targeting.cs" />
+    <Compile Include="Components\AIActor.cs" />
+    <Compile Include="Components\BattleActor.cs" />
+    <Compile Include="Components\BattleController.cs" />
+    <Compile Include="Components\CardClicker.cs" />
+    <Compile Include="Components\DeckBuilderActor.cs" />
+    <Compile Include="Components\UpdatableText.cs" />
     <Compile Include="GameMain.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
@@ -82,9 +94,7 @@
       <Name>Nez</Name>
     </ProjectReference>
   </ItemGroup>
-  <ItemGroup>
-    <Folder Include="Components\" />
-  </ItemGroup>
+  <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Import Project="$(MSBuildExtensionsPath)\MonoGame\v3.0\MonoGame.Content.Builder.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
