--- a/Arakara/Arakara.csproj
+++ b/Arakara/Arakara.csproj
@@ -44,6 +44,7 @@
     <Compile Include="Battle\Faction.cs" />
     <Compile Include="Battle\Grade.cs" />
     <Compile Include="Battle\Targeting.cs" />
+    <Compile Include="Common\EntityTags.cs" />
     <Compile Include="Components\AIActor.cs" />
     <Compile Include="Components\BattleActor.cs" />
     <Compile Include="Components\BattleController.cs" />
@@ -72,6 +73,9 @@
   </ItemGroup>
   <ItemGroup>
     <EmbeddedResource Include="Icon.ico" />
+    <Content Include="Content\Knight.png">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Content>
     <Content Include="External DLLs\Ionic.ZLib.dll" />
     <Content Include="External DLLs\Newtonsoft.Json.dll" />
     <Content Include="External DLLs\Nez.dll" />
