--- a/Arakara/Arakara.csproj
+++ b/Arakara/Arakara.csproj
@@ -54,12 +54,16 @@
   </PropertyGroup>
   <ItemGroup>
     <Compile Include="Battle\AI\AIDecider.cs" />
+    <Compile Include="Battle\Events\BattleEventEffect.cs" />
+    <Compile Include="Battle\Events\BattleEventTrigger.cs" />
     <Compile Include="Battle\Effects\ApplyStatusEffect.cs" />
     <Compile Include="Battle\BattleAction.cs" />
     <Compile Include="Battle\Effects\ActionEffect.cs" />
     <Compile Include="Battle\Animations.cs" />
     <Compile Include="Battle\BattleState.cs" />
-    <Compile Include="Battle\EventState.cs" />
+    <Compile Include="Battle\Events\BattleEventEffectState.cs" />
+    <Compile Include="Battle\Events\Effects\KillEffect.cs" />
+    <Compile Include="Battle\Events\Triggers\OnDeathTrigger.cs" />
     <Compile Include="Battle\Statuses\BattleStatus.cs" />
     <Compile Include="Battle\BattleStatusCollection.cs" />
     <Compile Include="Battle\Card\Card.cs" />
@@ -79,7 +83,7 @@
     <Compile Include="Components\BattleContainer.cs" />
     <Compile Include="Components\BattleActor.cs" />
     <Compile Include="Battle\BattleController.cs" />
-    <Compile Include="Battle\BattleEvent.cs" />
+    <Compile Include="Battle\Events\BattleEvent.cs" />
     <Compile Include="Components\CardClicker.cs" />
     <Compile Include="Components\DeckBuilderActor.cs" />
     <Compile Include="Components\EffectDisplay.cs" />
