--- a/Arakara/Arakara.csproj
+++ b/Arakara/Arakara.csproj
@@ -123,27 +123,16 @@
   </ItemGroup>
   <ItemGroup>
     <EmbeddedResource Include="Icon.ico" />
-    <Content Include="Content\guard.png">
-      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
-    </Content>
-    <Content Include="Content\guard_big.png">
-      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
-    </Content>
-    <Content Include="Content\Knight.png">
-      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
-    </Content>
-    <Content Include="Content\necromancer.png">
-      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
-    </Content>
-    <Content Include="Content\necromancer_big.png">
-      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
-    </Content>
-    <Content Include="Content\prisca.png">
-      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
-    </Content>
-    <Content Include="Content\prisca_big.png">
-      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
-    </Content>
+    <None Include="Content\fantasy.png" />
+    <None Include="Content\guard.png" />
+    <None Include="Content\guard_big.png" />
+    <None Include="Content\Knight.png" />
+    <None Include="Content\necromancer.png" />
+    <None Include="Content\necromancer_big.png" />
+    <None Include="Content\Nez\NezDefaultBMFont.fnt" />
+    <None Include="Content\prisca.png" />
+    <None Include="Content\prisca_big.png" />
+    <None Include="Content\Nez\NezDefaultBMFont.png" />
     <Content Include="External DLLs\Ionic.ZLib.dll" />
     <Content Include="External DLLs\Newtonsoft.Json.dll" />
     <Content Include="External DLLs\Nez.dll" />
@@ -153,13 +142,9 @@
     </Content>
   </ItemGroup>
   <ItemGroup>
-    <Content Include="Content\Nez\NezDefaultBMFont.xnb">
-      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
-    </Content>
-    <None Include="Content\Content.mgcb" />
-    <Content Include="Content\prisca.json">
-      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
-    </Content>
+    <None Include="Content\background.tmx" />
+    <MonoGameContentReference Include="Content\Content.mgcb" />
+    <None Include="Content\prisca.json" />
     <None Include="packages.config">
       <SubType>Designer</SubType>
     </None>
@@ -182,7 +167,6 @@
       <Install>false</Install>
     </BootstrapperPackage>
   </ItemGroup>
-  <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Import Project="$(MSBuildExtensionsPath)\MonoGame\v3.0\MonoGame.Content.Builder.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
