--- a/Arakara/Arakara.csproj
+++ b/Arakara/Arakara.csproj
@@ -79,6 +79,7 @@
     <Compile Include="Battle\Phases\Phase.cs" />
     <Compile Include="Battle\Statuses\BattleStatus.cs" />
     <Compile Include="Battle\BattleStatusCollection.cs" />
+    <Compile Include="Common\VirtualButtons.cs" />
     <Compile Include="Components\Card.cs" />
     <Compile Include="Battle\Effects\DamageEffect.cs" />
     <Compile Include="Battle\Faction.cs" />
