--- a/Arakara/Arakara.csproj
+++ b/Arakara/Arakara.csproj
@@ -118,6 +118,7 @@
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Scenes\MainGameScene.cs" />
+    <Compile Include="Scenes\MessageScene.cs" />
     <Compile Include="Scenes\StartMenuScreen.cs" />
   </ItemGroup>
   <ItemGroup>
@@ -160,6 +161,7 @@
     <Content Include="Content\background2.png" />
     <Content Include="Content\card.png" />
     <None Include="Content\card_dark.png" />
+    <None Include="Content\card_light.png" />
     <Content Include="Content\DarkHouseTiles.png" />
     <None Include="Content\default_0.png" />
     <Content Include="External DLLs\Ionic.ZLib.dll" />
