--- a/Arakara/Arakara.csproj
+++ b/Arakara/Arakara.csproj
@@ -126,6 +126,7 @@
     <Compile Include="GameMain.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Scenes\BaseScene.cs" />
     <Compile Include="Scenes\TestGameScene.cs" />
     <Compile Include="Scenes\MessageScene.cs" />
     <Compile Include="Scenes\StartMenuScreen.cs" />
@@ -174,7 +175,11 @@
     <None Include="Content\card_light.png" />
     <Content Include="Content\DarkHouseTiles.png" />
     <None Include="Content\default_0.png" />
+    <Content Include="Content\karlock_portrait.png" />
+    <Content Include="Content\marker.png" />
+    <Content Include="Content\namebox.png" />
     <Content Include="Content\prisca-portrait.png" />
+    <Content Include="Content\textbox.png" />
     <Content Include="External DLLs\Ionic.ZLib.dll" />
     <Content Include="External DLLs\Newtonsoft.Json.dll" />
     <Content Include="External DLLs\Nez.dll" />
