work more on system

--- a/Arakara/Arakara.csproj
+++ b/Arakara/Arakara.csproj
@@ -133,6 +133,7 @@
     <Compile Include="Scenes\MessageScene.cs" />
     <Compile Include="Scenes\StartMenuScreen.cs" />
     <Compile Include="Scenes\TestDialogueScene.cs" />
+    <Compile Include="Scenes\TestNewBattleScene.cs" />
   </ItemGroup>
   <ItemGroup>
     <Reference Include="Newtonsoft.Json, Version=8.0.0.0, Culture=neutral, PublicKeyToken=30ad4fe6b2a6aeed, processorArchitecture=MSIL">
@@ -214,6 +215,10 @@
     </None>
   </ItemGroup>
   <ItemGroup>
+    <ProjectReference Include="..\Arakara.BattleEngine\Arakara.BattleEngine.csproj">
+      <Project>{1376d10d-82f2-4a3c-8a49-073a7e739622}</Project>
+      <Name>Arakara.BattleEngine</Name>
+    </ProjectReference>
     <ProjectReference Include="..\Nez\Nez-PCL\Nez.csproj">
       <Project>{60b7197d-d0d5-405c-90a2-a56903e9b039}</Project>
       <Name>Nez</Name>
