--- a/Arakara.BattleEngine/Arakara.BattleEngine.csproj
+++ b/Arakara.BattleEngine/Arakara.BattleEngine.csproj
@@ -9,8 +9,9 @@
     <AppDesignerFolder>Properties</AppDesignerFolder>
     <RootNamespace>Arakara.BattleEngine</RootNamespace>
     <AssemblyName>Arakara.BattleEngine</AssemblyName>
-    <TargetFrameworkVersion>v4.6.1</TargetFrameworkVersion>
+    <TargetFrameworkVersion>v4.5</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
+    <TargetFrameworkProfile />
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
     <DebugSymbols>true</DebugSymbols>
@@ -30,6 +31,10 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="Newtonsoft.Json, Version=8.0.0.0, Culture=neutral, PublicKeyToken=30ad4fe6b2a6aeed, processorArchitecture=MSIL">
+      <SpecificVersion>False</SpecificVersion>
+      <HintPath>..\Arakara\External DLLs\Newtonsoft.Json.dll</HintPath>
+    </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
     <Reference Include="System.Xml.Linq" />
@@ -40,7 +45,10 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Actions\AbilityAction.cs" />
+    <Compile Include="Actions\BattleMoveAction.cs" />
     <Compile Include="Actions\ChangeTurnAction.cs" />
+    <Compile Include="Actions\DamageAction.cs" />
     <Compile Include="Actions\Deckbuilder\DrawCardsAction.cs" />
     <Compile Include="Actions\Deckbuilder\OverdrawAction.cs" />
     <Compile Include="Actions\Deckbuilder\ShuffleAction.cs" />
@@ -57,19 +65,31 @@
     <Compile Include="Models\Actor.cs" />
     <Compile Include="Models\AI\AIActor.cs" />
     <Compile Include="Models\Battle.cs" />
-    <Compile Include="Models\BattleAction.cs" />
+    <Compile Include="Models\Control.cs" />
+    <Compile Include="Models\Move.cs" />
     <Compile Include="Models\Deckbuilder\Card.cs" />
     <Compile Include="Models\Deckbuilder\DeckbuilderActor.cs" />
     <Compile Include="Models\Deckbuilder\Zones.cs" />
     <Compile Include="Models\Energy.cs" />
+    <Compile Include="Models\Mark.cs" />
+    <Compile Include="Models\Side.cs" />
+    <Compile Include="Models\Target.cs" />
+    <Compile Include="Models\TargetSelectors\ManualTarget.cs" />
+    <Compile Include="Models\TargetSelectors\RandomTarget.cs" />
     <Compile Include="Models\Validator.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="States\GlobalGameState.cs" />
+    <Compile Include="States\SequenceState.cs" />
     <Compile Include="States\PlayerIdleState.cs" />
+    <Compile Include="Systems\AbilitySystem.cs" />
     <Compile Include="Systems\ActionSystem.cs" />
+    <Compile Include="Systems\BattleMoveSystem.cs" />
+    <Compile Include="Systems\DamageSystem.cs" />
     <Compile Include="Systems\Deckbuilder\CardSystem.cs" />
     <Compile Include="Systems\Deckbuilder\DeckbuilderTurnSystem.cs" />
     <Compile Include="Systems\Deckbuilder\DrawCardsSystem.cs" />
-    <Compile Include="Systems\Enemy\EnemyTurnSystem.cs" />
+    <Compile Include="Systems\AI\AITurnSystem.cs" />
+    <Compile Include="Systems\TargetSystem.cs" />
     <Compile Include="Systems\TurnSystem.cs" />
     <Compile Include="Systems\DataSystem.cs" />
   </ItemGroup>
