--- a/Arakara.BattleEngine/Arakara.BattleEngine.csproj
+++ b/Arakara.BattleEngine/Arakara.BattleEngine.csproj
@@ -78,9 +78,12 @@
     <Compile Include="Models\TargetSelectors\RandomTarget.cs" />
     <Compile Include="Models\Validator.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="States\BattleOverState.cs" />
+    <Compile Include="States\EnemyTurnState.cs" />
     <Compile Include="States\GlobalGameState.cs" />
     <Compile Include="States\SequenceState.cs" />
-    <Compile Include="States\PlayerIdleState.cs" />
+    <Compile Include="States\StartState.cs" />
+    <Compile Include="States\WaitingForInputState.cs" />
     <Compile Include="Systems\AbilitySystem.cs" />
     <Compile Include="Systems\ActionSystem.cs" />
     <Compile Include="Systems\BattleMoveSystem.cs" />
@@ -92,6 +95,7 @@
     <Compile Include="Systems\TargetSystem.cs" />
     <Compile Include="Systems\TurnSystem.cs" />
     <Compile Include="Systems\DataSystem.cs" />
+    <Compile Include="Systems\VictorySystem.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\Nez\Nez-PCL\Nez.csproj">
